add header, paragraph and list elements

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>The Resort</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <title>The Bohemian Resort</title>
+  </head>
+  <body>
+      <h1>THE BOHEMIAN RESORT</h1>
+
+      <p>This is the official site of The Bohemia Resort</p> 
+      <p>The Bohemian Resort is a modern state of the art resort situated in the vibrant and serene private island of Bohemia</p>
+
+      <ul>
+          <li>Accomodations</li>
+          <li>Activities</li>
+          <li>Book</li>
+          <li>Contact</li>
+          <li>Gallery</li>
+      </ul>
+
+
+  </body>
 </html>
