add h2 element for accomodations

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
       <p>The Bohemian Resort is a modern state of the art resort situated in the vibrant and serene private island of Bohemia</p>
 
       <ul>
-          <li>Accomodations</li>
+          <li>Accomodation</li>
           <li>Activities</li>
           <li>Book</li>
           <li>Contact</li>
           <li>Gallery</li>
       </ul>
+
+      <h2>Accomodation</h2>
+      <p>Three kind of rooms to meet all your needs: <strong>Junior room</strong>, <strong>Major Suite</strong> with their huge balcony and <strong>Family room</strong> formed by two connected rooms with a shared bathroom. <br> All rooms have a/c, minibar, safe, free Wifi, bathroom with shower and they can accomodate a cot.</p>
 
 
   </body>
