--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <h2>Accomodation</h2>
       <p>Three kind of rooms to meet all your needs: <strong>Junior room</strong>, <strong>Major Suite</strong> with their huge balcony and <strong>Family room</strong> formed by two connected rooms with a shared bathroom. <br> All rooms have a/c, minibar, safe, free Wifi, bathroom with shower and they can accomodate a cot.</p>
 
+      <h2>Activities</h2>
+      <p>What's cool in or around Bohemia? <strong>Ikigai Beach</strong> proposes excursions and experiences to let you discover the magical Bohemia Island, its treasures and traditions.<strong>Plato creek</strong> for beach life and snorkeling, <strong>Peris ruins</strong> for History lovers, <strong>Mafia Canyon</strong> known also as the Hell's Kitchen with its mysterious legends, one of the best kite surf spot in the country, camels and quad riding and much more.</p>
+
 
   </body>
 </html>
