add h3 element for contacts

--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
           <li>Free wifi in the rooms and in the common areas</li>
           <li>Welcome drink</li>
           <li>Tea time with small sweets & snacks</li>
-          
-                    
       </ul>
+
+      <h3>Contact us</h3>
+
+      <h2></h2>
   </body>
 </html>
