create ids for every section of the page

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
       <p>The Bohemian Resort is the coolest place where you can spend a weekend to the beach or a getaway to break the working routine. Ikigai Beach Authorities and Silverstone Air are now partners to give you the best and most convenient occasion to visit. You will dive in our huge pools with Jacuzzi, you can enjoy the Enlighted Safari or visit the Mafia Canyon and the ancient Ruins of Peris or join one of our many excursions and safari. Or simply you will relax enjoying your stay in our rooms with free wifi, a massage in our SPA, the delicious meals and cocktails served in our Chakra Bar & Restaurant on the beach pampered by our professional staff.</p>
 
       <ul>
-          <li>Accomodation</li>
-          <li>Activities</li>
-          <li>Book</li>
-          <li>Contact</li>
-          <li>Gallery</li>
+          <li><a href="#accomodation">Accomodation</a></li>
+          <li><a href="#activities">Activities</a></li>
+          <li><a href="#book">Book</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="#gallery">Gallery</a></li>
       </ul>
 
       <hr>
 
-      <h2>Accomodation</h2>
+      <h2 id="accomodation">Accomodation</h2>
       <p>Three kind of rooms to meet all your needs: <strong>Junior room</strong>, <strong>Major Suite</strong> with their huge balcony and <strong>Family room</strong> formed by two connected rooms with a shared bathroom. <br> All rooms have a/c, minibar, safe, free Wifi, bathroom with shower and they can accomodate a cot.</p>
 
       <hr>
 
-      <h2>Activities</h2>
+      <h2 id="activities">Activities</h2>
       <p>What's cool in or around Bohemia? <strong>Ikigai Beach</strong> proposes excursions and experiences to let you discover the magical Bohemia Island, its treasures and traditions.<strong>Plato creek</strong> for beach life and snorkeling, <strong>Peris ruins</strong> for History lovers, <strong>Mafia Canyon</strong> known also as the Hell's Kitchen with its mysterious legends, one of the best kite surf spot in the country, camels and quad riding and much more.</p>
 
       <hr>
 
-      <h2>Book</h2>
+      <h2 id="book">Book</h2>
       <p>Bohemian Package Nairobi Wilson - Bohemia Island and return flights. <br><br>This offer includes:</p>
 
       <ul>
@@ -47,11 +47,11 @@
           <li>Tea time with small sweets & snacks</li>
       </ul>
 
-      <h3>Contact us</h3>
+      <h3 id="contact">Contact us</h3>
 
       <hr>
 
-      <h2>Gallery</h2>
+      <h2 id="gallery">Gallery</h2>
 
   </body>
 </html>
