--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+  <body class="container">
       <h1>THE BOHEMIAN RESORT</h1>
 
       <p>This is the official site of The Bohemia Resort</p> 
