add side navigation bar

--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="img/icon.png">
     <title>The Bohemian Resort</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/scripts.js"></script>
   </head>
   <body class="container">
-      <h1>THE BOHEMIAN RESORT</h1>
+    <div class="side-nav">
+          <a href="#"><img src="img/icon.png" alt="Beach resort icon"></a>
+          <a href="#">About</a>
+          <a href="#">Accomodation</a>
+          <a href="#">Gallery</a>
+          <a href="#">Contact</a>
+    </div>
+
+    <div class="main">
+        <h1>THE BOHEMIAN RESORT</h1>
+
+        <p>This is the official site of The Bohemia Resort</p> 
+        <p>The Bohemian Resort is a modern state of the art resort situated in the vibrant and serene private island of Bohemia</p>
+        <p>The Bohemian Resort is the coolest place where you can spend a weekend to the beach or a getaway to break the working routine. Ikigai Beach Authorities and Silverstone Air are now partners to give you the best and most convenient occasion to visit. You will dive in our huge pools with Jacuzzi, you can enjoy the Enlighted Safari or visit the Mafia Canyon and the ancient Ruins of Peris or join one of our many excursions and safari. Or simply you will relax enjoying your stay in our rooms with free wifi, a massage in our SPA, the delicious meals and cocktails served in our Chakra Bar & Restaurant on the beach pampered by our
+    </div>
+
+      <!-- <h1>THE BOHEMIAN RESORT</h1>
 
       <p>This is the official site of The Bohemia Resort</p> 
       <p>The Bohemian Resort is a modern state of the art resort situated in the vibrant and serene private island of Bohemia</p>
-      <p>The Bohemian Resort is the coolest place where you can spend a weekend to the beach or a getaway to break the working routine. Ikigai Beach Authorities and Silverstone Air are now partners to give you the best and most convenient occasion to visit. You will dive in our huge pools with Jacuzzi, you can enjoy the Enlighted Safari or visit the Mafia Canyon and the ancient Ruins of Peris or join one of our many excursions and safari. Or simply you will relax enjoying your stay in our rooms with free wifi, a massage in our SPA, the delicious meals and cocktails served in our Chakra Bar & Restaurant on the beach pampered by our professional staff.</p>
-
+      <p>The Bohemian Resort is the coolest place where you can spend a weekend to the beach or a getaway to break the working routine. Ikigai Beach Authorities and Silverstone Air are now partners to give you the best and most convenient occasion to visit. You will dive in our huge pools with Jacuzzi, you can enjoy the Enlighted Safari or visit the Mafia Canyon and the ancient Ruins of Peris or join one of our many excursions and safari. Or simply you will relax enjoying your stay in our rooms with free wifi, a massage in our SPA, the delicious meals and cocktails served in our Chakra Bar & Restaurant on the beach pampered by our 
+        
       <ul>
           <li><a href="#accomodation">Accomodation</a></li>
           <li><a href="#activities">Activities</a></li>
@@ -52,7 +72,6 @@
 
       <hr>
 
-      <h2 id="gallery">Gallery</h2>
-
+      <h2 id="gallery">Gallery</h2> -->
   </body>
 </html>
