move the terms and conditions link to the bottom of the side nav

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           <a href="#">About</a>
           <a href="#">Accomodation</a>
           <a href="#">Gallery</a>
-          <a href="#">Contact</a>
+          <a href="#">Book</a>
+          <a href="#" id="tC">T&C's</a>
     </div>
 
     <div class="main">
