--- a/index.html
+++ b/index.html
@@ -5,74 +5,31 @@
     <title>The Bohemian Resort</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline|Bungee+Shade|Lato|Lemonada&display=swap" rel="stylesheet">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
   </head>
   <body class="container">
     <div class="side-nav">
-          <a href="#"><img src="img/icon.png" alt="Beach resort icon"></a>
-          <a href="#">About</a>
-          <a href="#">Accomodation</a>
-          <a href="#">Gallery</a>
-          <a href="#">Book</a>
+          <a href=""><img src="img/icon.png" alt="Beach resort icon"></a>
+          <a href="#about" id="about-link">About</a>
+          <a href="#" id="accomodation-link">Accomodation</a>
+          <a href="#" id="gallery-link">Gallery</a>
+          <a href="#" id="book-link">Book</a>
           <a href="#" id="tC">T&C's</a>
     </div>
 
-    <div class="main">
-        <h1>THE BOHEMIAN RESORT</h1>
+    <div>
+      <div class="home-page">
+          <!-- <h1>THE BOHEMIAN RESORT</h1> -->
+      </div>
+      <div class="main">
+          
 
-        <p>This is the official site of The Bohemia Resort</p> 
-        <p>The Bohemian Resort is a modern state of the art resort situated in the vibrant and serene private island of Bohemia</p>
-        <p>The Bohemian Resort is the coolest place where you can spend a weekend to the beach or a getaway to break the working routine. Ikigai Beach Authorities and Silverstone Air are now partners to give you the best and most convenient occasion to visit. You will dive in our huge pools with Jacuzzi, you can enjoy the Enlighted Safari or visit the Mafia Canyon and the ancient Ruins of Peris or join one of our many excursions and safari. Or simply you will relax enjoying your stay in our rooms with free wifi, a massage in our SPA, the delicious meals and cocktails served in our Chakra Bar & Restaurant on the beach pampered by our
+          <p>This is the official site of The Bohemia Resort</p> 
+          <p>The Bohemian Resort is a modern state of the art resort situated in the vibrant and serene private island of Bohemia</p>
+          <p>The Bohemian Resort is the coolest place where you can spend a weekend to the beach or a getaway to break the working routine. Ikigai Beach Authorities and Silverstone Air are now partners to give you the best and most convenient occasion to visit. You will dive in our huge pools with Jacuzzi, you can enjoy the Enlighted Safari or visit the Mafia Canyon and the ancient Ruins of Peris or join one of our many excursions and safari. Or simply you will relax enjoying your stay in our rooms with free wifi, a massage in our SPA, the delicious meals and cocktails served in our Chakra Bar & Restaurant on the beach pampered by our...</p>
+      </div>
     </div>
-
-      <!-- <h1>THE BOHEMIAN RESORT</h1>
-
-      <p>This is the official site of The Bohemia Resort</p> 
-      <p>The Bohemian Resort is a modern state of the art resort situated in the vibrant and serene private island of Bohemia</p>
-      <p>The Bohemian Resort is the coolest place where you can spend a weekend to the beach or a getaway to break the working routine. Ikigai Beach Authorities and Silverstone Air are now partners to give you the best and most convenient occasion to visit. You will dive in our huge pools with Jacuzzi, you can enjoy the Enlighted Safari or visit the Mafia Canyon and the ancient Ruins of Peris or join one of our many excursions and safari. Or simply you will relax enjoying your stay in our rooms with free wifi, a massage in our SPA, the delicious meals and cocktails served in our Chakra Bar & Restaurant on the beach pampered by our 
-        
-      <ul>
-          <li><a href="#accomodation">Accomodation</a></li>
-          <li><a href="#activities">Activities</a></li>
-          <li><a href="#book">Book</a></li>
-          <li><a href="#contact">Contact Us</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-      </ul>
-
-      <hr>
-
-      <h2 id="accomodation">Accomodation</h2>
-      <p>Three kind of rooms to meet all your needs: <strong>Junior room</strong>, <strong>Major Suite</strong> with their huge balcony and <strong>Family room</strong> formed by two connected rooms with a shared bathroom. <br> All rooms have a/c, minibar, safe, free Wifi, bathroom with shower and they can accomodate a cot.</p>
-
-      <hr>
-
-      <h2 id="activities">Activities</h2>
-      <p>What's cool in or around Bohemia? <strong>Ikigai Beach</strong> proposes excursions and experiences to let you discover the magical Bohemia Island, its treasures and traditions.<strong>Plato creek</strong> for beach life and snorkeling, <strong>Peris ruins</strong> for History lovers, <strong>Mafia Canyon</strong> known also as the Hell's Kitchen with its mysterious legends, one of the best kite surf spot in the country, camels and quad riding and much more.</p>
-
-      <hr>
-
-      <h2 id="book">Book</h2>
-      <p>Bohemian Package Nairobi Wilson - Bohemia Island and return flights. <br><br>This offer includes:</p>
-
-      <ul>
-          <li>Return flight to Nairobi Wilson</li>
-          <li>Return transfer to Malindi Airport</li>
-          <li>2 nights accommodation in double room. All our rooms have a/c, safe and minibar;</li>
-          <li>Free upgrade in Major Suite (according with the availability)</li>
-          <li>Breakfast & dinner in our Gold 55 Restaurant overlooking the Indian Ocean (beverages are excluded)</li>
-          <li>Access to our private beach (hey, it's the Golden Beach of Ikigai!!!) and to the swimming pool;</li>
-          <li>Free sunbeds and towels</li>
-          <li>Free wifi in the rooms and in the common areas</li>
-          <li>Welcome drink</li>
-          <li>Tea time with small sweets & snacks</li>
-      </ul>
-
-      <h3 id="contact">Contact us</h3>
-
-      <hr>
-
-      <h2 id="gallery">Gallery</h2> -->
   </body>
 </html>
