--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   </head>
   <body class="container">
     <div class="side-nav">
-          <a href=""><img src="img/icon.png" alt="Beach resort icon"></a>
+          <a href="#" id="boho"><img src="img/icon.png" alt="Beach resort icon"></a> <hr>
+          <h2>The Bohemian Resort</h2> <hr> 
           <a href="#about" id="about-link">About</a>
           <a href="#" id="accomodation-link">Accomodation</a>
           <a href="#" id="gallery-link">Gallery</a>
-          <a href="#" id="book-link">Book</a>
+          <a href="#" id="book-link">Book</a> <hr>
           <a href="#" id="tC">T&C's</a>
     </div>
 
