replace the dotted lines with solid lines an add book button

--- a/index.html
+++ b/index.html
@@ -12,24 +12,17 @@
   <body class="container">
     <div class="side-nav">
           <a href="#" id="boho"><img src="img/icon.png" alt="Beach resort icon"></a> <hr>
-          <h2>The Bohemian Resort</h2> <hr> 
+          <a href=".main"><h2>The Bohemian Resort</h2></a> <hr> 
           <a href="#about" id="about-link">About</a>
           <a href="#" id="accomodation-link">Accomodation</a>
           <a href="#" id="gallery-link">Gallery</a>
-          <a href="#" id="book-link">Book</a> <hr>
-          <a href="#" id="tC">T&C's</a>
+          <a href="#" id="tC">T&C's</a> <hr>
+          <button class="btn">Book</button>
     </div>
 
     <div>
-      <div class="home-page">
-          <!-- <h1>THE BOHEMIAN RESORT</h1> -->
-      </div>
       <div class="main">
-          
-
-          <p>This is the official site of The Bohemia Resort</p> 
-          <p>The Bohemian Resort is a modern state of the art resort situated in the vibrant and serene private island of Bohemia</p>
-          <p>The Bohemian Resort is the coolest place where you can spend a weekend to the beach or a getaway to break the working routine. Ikigai Beach Authorities and Silverstone Air are now partners to give you the best and most convenient occasion to visit. You will dive in our huge pools with Jacuzzi, you can enjoy the Enlighted Safari or visit the Mafia Canyon and the ancient Ruins of Peris or join one of our many excursions and safari. Or simply you will relax enjoying your stay in our rooms with free wifi, a massage in our SPA, the delicious meals and cocktails served in our Chakra Bar & Restaurant on the beach pampered by our...</p>
+         
       </div>
     </div>
   </body>
