add a fixed background text and a header element for sections

--- a/index.html
+++ b/index.html
@@ -12,17 +12,28 @@
   <body class="container">
     <div class="side-nav">
           <a href="#" id="boho"><img src="img/icon.png" alt="Beach resort icon"></a> <hr>
-          <a href=".main"><h2>The Bohemian Resort</h2></a> <hr> 
           <a href="#about" id="about-link">About</a>
-          <a href="#" id="accomodation-link">Accomodation</a>
-          <a href="#" id="gallery-link">Gallery</a>
-          <a href="#" id="tC">T&C's</a> <hr>
+          <a href="#accomodation" id="accomodation-link">Accomodation</a>
+          <a href="#gallery" id="gallery-link">Gallery</a>
+          <a href="#termsAndConditions" id="tC">T&C's</a> <hr>
           <button class="btn">Book</button>
     </div>
-
     <div>
       <div class="main">
-         
+          <div id="about">
+              <h3>About Us</h3>
+          </div>
+          <div id="accomodation">
+              <h3>Accomodation</h3>
+          </div>
+          <div id="gallery">
+              <h3>Gallery</h3>
+          </div>
+          <div id="termsAndConditions">
+              <h3>T&C's</h3>
+          </div>
+
+          <div class="bg-text"><h2>The Bohemian Resort</h2></div>
       </div>
     </div>
   </body>
