--- a/index.html
+++ b/index.html
@@ -22,27 +22,44 @@
       <div class="main">
           <div id="about">
               <h3>About Us</h3>
+              <hr>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu magna luctus suscipit. Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc, viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. </p>
           </div>
           <div id="accomodation">
               <h3>Accomodation</h3>
+              <hr>
+              <button class="accordion">Type A</button>
+                <div class="panel">
+                  <p><img src="https://w.wallhaven.cc/full/r7/wallhaven-r7dgr1.jpg" class="img-thumbnail" alt=""></p>
+                </div>
+
+              <button class="accordion">Type B</button>
+                <div class="panel">
+                  <p><img src="https://w.wallhaven.cc/full/0q/wallhaven-0ql6ld.jpg" class="img-thumbnail" alt=""></p>
+                </div>
+
+              <button class="accordion">Type C</button>
+                <div class="panel">
+                  <p><img src="https://w.wallhaven.cc/full/n6/wallhaven-n673ww.jpg" class="img-thumbnail" alt=""></p>
+                </div>
               
           </div>
           <div id="gallery">
               <h3>Gallery</h3>
-              <P>Click on an image to expand</P>
+              <hr>
+              <P>(Click on an image to expand)</P>
               <div class="row">
                   <div class="column">
-                    <img src="https://w.wallhaven.cc/full/r7/wallhaven-r7dgr1.jpg"  class="img-thumbnail" alt="Room A" onclick="myFunction(this);">
+                    <img src="https://w.wallhaven.cc/full/95/wallhaven-95el3d.jpg"  class="img-thumbnail" alt="Main pool area" onclick="myFunction(this);">
                   </div>
                   <div class="column">
-                    <img src="https://w.wallhaven.cc/full/0q/wallhaven-0ql6ld.jpg" class="img-thumbnail" alt="Room B" onclick="myFunction(this);">
+                    <img src="https://w.wallhaven.cc/full/42/wallhaven-423gy9.jpg" class="img-thumbnail" alt="Bar area" onclick="myFunction(this);">
                   </div>
                   <div class="column">
-                    <img src="https://w.wallhaven.cc/full/n6/wallhaven-n673ww.jpg" class="img-thumbnail" alt="Room C" onclick="myFunction(this);">
+                    <img src="https://w.wallhaven.cc/full/42/wallhaven-42l926.jpg" class="img-thumbnail" alt="Room type B outside view" onclick="myFunction(this);">
                   </div>
                   <div class="column">
-                    <img src="https://w.wallhaven.cc/full/0q/wallhaven-0qg76d.jpg" class="img-thumbnail" alt="Room D" onclick="myFunction(this);">
+                    <img src="https://w.wallhaven.cc/full/0q/wallhaven-0qg76d.jpg" class="img-thumbnail" alt="Main lounge" onclick="myFunction(this);">
                   </div>
                 </div>
                 <div class="container container2">
